--- a/examples/package.json
+++ b/examples/package.json
@@ -10,6 +10,7 @@
   "author": "IBM",
   "license": "Apache-2.0",
   "dependencies": {
+    "dotenv": "^7.0.0",
     "ibm-appconfiguration-node-sdk": "latest"
   }
 }
